GpMessages/9897323574900
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, July 31, 2023 5:06:18 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    total_count = sum(1 for row in arcpy.da.SearchCursor("Count"))
                ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Monday, July 31, 2023 5:06:18 PM (Elapsed Time: 0.14 seconds)</msg></messages>